# usage

./: .dockerignore  .gitignore  AGY_CARD_STATUS.md  CHANGELOG.en.md  CHANGELOG.md  CHANGELOG.zh-TW.md  CLAUDE.md  LICENSE  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  agy_disk_cache.py  agy_loader.py  agy_quota_probe.py  agy_window_keeper.py  ai_daily_loader.py  ai_updates.json  anthropic_status.py  burn_rate.py  codex_disk_cache.py  codex_events.py  codex_fork_replay.py  codex_loader.py  critter_frames.py  doctor.py  fsevents_watch.py  gemini_loader.py  history_disk_cache.py  history_loader.py  i18n.json  i18n.py  jsonl_utils.py  login_item.py  main.py  menubar.py  menubar_agy.py  menubar_prefs.py  (+40 more)
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: dependabot.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  check.yml  codeql.yml  release.yml  scorecard.yml
adapters/: agy.py  claude.py  codex.py  rate_limits.py  registry.py
analyzer/: aggregator.py  ai_updates_loader.py  blocks.py  cost.py  diagnoser.py  insights.py  persona_loader.py  reporter.py
assets/: usage.icns
assets/panels/: ai_daily.html  aquarium.html  black_hole.html  classic.html  cloud_observation.html  lepidoptera.html  matrix.html  newspaper.html  prism_arcade.html  talent_market.html  ukiyo_phoenix.html  win95.html  world_cup.html
docs/: DEVELOPMENT.en.md  DEVELOPMENT.md  DEVELOPMENT.zh-TW.md  index.html
docs/superpowers/plans/: 2026-05-20-windows-widget.md
docs/superpowers/specs/: 2026-05-20-windows-widget-design.md  2026-05-21-windows-auto-setup-hook-design.md
fuzz/: fuzz_codex_loader.py  fuzz_history_loader.py
panels/: __init__.py  base.py  matrix.py  payload.py  web_panel.py
scripts/: build_app.sh  build_icns.sh  build_windows.ps1  check_doc_parity.py  make_app_icon.py
tests/: conftest.py  helpers.py  test_adapters_codex.py  test_adapters_rate_limits.py  test_aggregator.py  test_agy_adapter.py  test_agy_loader.py  test_agy_quota_probe.py  test_agy_window_keeper.py  test_ai_daily_loader.py  test_ai_updates_loader.py  test_analyzer_blocks.py  test_analyzer_pipeline.py  test_anthropic_status.py  test_burn_rate.py  test_codex_consistency.py  test_codex_loader.py  test_critter_frames.py  test_diagnoser.py  test_disk_cache_shards.py  test_doctor.py  test_fsevents_watch.py  test_gemini_loader.py  test_history_loader.py  test_html_report_snapshot.py  test_html_report_tips.py  test_insights.py  test_main.py  test_menubar.py  test_menubar_agy.py  test_menubar_prefs.py  test_menubar_state.py  test_multi_device_status.py  test_panels.py  test_panels_lazy_import.py  test_persona_loader.py  test_pricing.py  test_project_resolver.py  test_reporter_build_data.py  test_resume_loader.py  (+26 more)
tests/fixtures/: codex_session_golden.jsonl
tests/fixtures/html_report_snapshots/: empty_zh_tw.html  full_en.html  full_zh_tw.html
ui/: html_report.py  report_scripts.py  report_styles.py  tables.py
