[project]
name = "usage"
version = "0.28.13"
description = "usage — 在 macOS menu bar 顯示 Claude Code 用量的繁中小工具（也提供終端機 TUI）"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [
    "pyobjc-framework-Cocoa>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-UserNotifications>=11.0; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=11.0; sys_platform == 'darwin'",
    "rich>=15.0.0,<16.0.0",
]

[project.optional-dependencies]
windows = [
    "pystray>=0.19.5; sys_platform == 'win32'",
    "pillow>=11.0.0; sys_platform == 'win32'",
    "pywebview>=5.4; sys_platform == 'win32'",
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "menubar",
    "menubar_prefs",
    "menubar_state",
    "usage_notifications",
    "tui",
    "pricing",
    "history_loader",
    "usage_rate",
    "usage_statusline",
    "setup_hook",
    "session_hooks",
    "login_item",
    "win_login_item",
    "wintray",
    "usage_client",
    "codex_loader",
    "agy_loader",
    "agy_disk_cache",
    "agy_quota_probe",
    "critter_frames",
    "tui_sprite",
    "i18n",
    "usage_cli",
    "burn_rate",
    "update_checker",
    "usage_lang",
    "usage_statusline_forwarder",
    "usage_session_resume",
    "usage_terse_mode",
    "project_resolver",
    "subscription",
    "doctor",
]

[tool.setuptools.packages.find]
include = ["adapters*", "analyzer*", "panels*", "ui*"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
]
build = [
    "py2app>=0.28; sys_platform == 'darwin'",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["release-win"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# usage_statusline.py 設計成可以用系統 python3 跑（macOS 內建是 3.9），
# 必須避開 3.11+ 才有的 datetime.UTC，用 timezone.utc 取代。
"usage_statusline.py" = ["UP017"]
# usage_session_resume.py 同樣裝進 ~/.claude/ 給系統 python3 (3.9) 跑，同一條限制。
"usage_session_resume.py" = ["UP017"]
# Imported analytics source is kept with minimal path fixes; keep formatting
# stable for this integration commit.
"adapters/**/*.py" = ["E501", "I001", "SIM108", "UP015", "UP017"]
"analyzer/**/*.py" = ["E501", "I001", "UP015", "UP017"]
"ui/**/*.py" = ["E501", "I001", "UP017", "UP035"]
"usage_cli.py" = ["E501", "I001", "UP017"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
pretty = true
exclude = "^(build|dist|release-win)/"

[[tool.mypy.overrides]]
module = ["rich.*", "PIL.*", "pystray.*", "webview.*"]
ignore_missing_imports = true

# PyObjC C-extension frameworks ship without type stubs / py.typed marker.
# `ignore_missing_imports` is the standard idiom for stubless modules — this
# is NOT suppressing a real bug, just declaring the frameworks are untyped.
[[tool.mypy.overrides]]
module = ["AppKit", "Foundation", "objc", "Quartz", "UserNotifications", "WebKit"]
ignore_missing_imports = true

# usage_cli's key readers pair a POSIX branch (termios/tty) with a Windows
# branch (msvcrt); each side's `type: ignore` comments are only "used" when
# mypy runs on the other platform, so unused-ignore warnings must stay off
# for this module to keep `mypy .` green on both macOS and Windows CI.
[[tool.mypy.overrides]]
module = "usage_cli"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
